# landing_illuminodes

./: .gitignore  Cargo.toml  README.md  askama.toml  deploy_script.sh  package.json  tailwind.config.cjs
public/: main.css
public/js/: manifest.json  swConfiguration.js  utils.js
public/styles/: main.css  prod.css
src/backend/: consts.rs  handlers.rs  html.rs  lib.rs  router.rs
src/frontend/: tailwind.css
src/frontend/templates/: base.html  contactDetails.html  contactForm.html  contactResponse.html  footer.html  header.html  home.html  sticky.html
src/frontend/templates/sections/: about.html  landing.html  mission.html  tech.html
src/js/: swConfiguration.js  utils.js
