[package]
name = "hat-stack"
version = "0.1.0"
edition = "2021"

[lib]
name = "backend"
path = "src/backend/lib.rs"

[[bin]]
name = "router"
path = "src/backend/router.rs"

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.1", features = ["with-axum"]}
askama_axum = "0.4.0"
axum = { version = "0.7.4", features = ["tokio"]}
chrono = "0.4.29"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
tracing = {version = "0.1.37", features = ["log"] }
tracing-subscriber = {version = "0.3.17", features = ["env-filter"] }

